; ModuleID = '/home/carl/AnghaBench/git/extr_tree.c_parse_tree_buffer.c'
source_filename = "/home/carl/AnghaBench/git/extr_tree.c_parse_tree_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree = type { i64, i8*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_tree_buffer(%struct.tree* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.tree*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.tree* %0, %struct.tree** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load %struct.tree*, %struct.tree** %5, align 8
  %9 = getelementptr inbounds %struct.tree, %struct.tree* %8, i32 0, i32 2
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %24

14:                                               ; preds = %3
  %15 = load %struct.tree*, %struct.tree** %5, align 8
  %16 = getelementptr inbounds %struct.tree, %struct.tree* %15, i32 0, i32 2
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  store i32 1, i32* %17, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load %struct.tree*, %struct.tree** %5, align 8
  %20 = getelementptr inbounds %struct.tree, %struct.tree* %19, i32 0, i32 1
  store i8* %18, i8** %20, align 8
  %21 = load i64, i64* %7, align 8
  %22 = load %struct.tree*, %struct.tree** %5, align 8
  %23 = getelementptr inbounds %struct.tree, %struct.tree* %22, i32 0, i32 0
  store i64 %21, i64* %23, align 8
  store i32 0, i32* %4, align 4
  br label %24

24:                                               ; preds = %14, %13
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
